[metadata]
name = projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanbreckenridge/projects
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.10

[mypy]
pretty = True
disallow_any_generics = False
show_error_context = True
show_error_codes = True
namespace_packages = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[flake8]
ignore = E501
